[project]
name = "ant-connect-streamlit-demo"
version = "0.1.0"
description = "Demo Streamlit app showcasing ant-connect-streamlit inside ANT-OS"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "ant-connect-streamlit",
]

[tool.uv.sources]
ant-connect-streamlit = { path = "../ant-connect-streamlit", editable = true }
